# sample-labeler

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-analysis.txt  requirements-train.txt  requirements.txt
.github/workflows/: test.yml
docs/: patch-5-learned-fusion.md
scripts/: beat_this_predict.py  check_fusion_parity.py  generate_smoke_wav.py  skey_predict.py
src/autolabel/: __init__.py  analyzers.py  backends.py  cli.py  config.py  default.yaml  domain.py  learned_fusion.py  music.py  objectives.py  pipeline.py  preprocess.py  report.py  schema.py  scoring.py
tests/: test_bass_root.py  test_beat_grid.py  test_cli.py  test_learned_fusion.py  test_music.py  test_pipeline.py  test_preprocess.py  test_scoring.py  test_skey_runner.py  test_torch_numpy_parity.py  test_training_data.py
train/: __init__.py  data.py  export_params.py  labels.example.csv  losses.py  model.py  train_fusion.py
