[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "inbloom-sample-labeler"
version = "0.1.0"
description = "Calibrated single-file musical key and tempo analysis"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "click>=8.1,<9",
  "numpy>=1.26,<2",
  "pydantic>=2.7,<3",
  "PyYAML>=6,<7",
  "scipy>=1.12,<2",
  "soundfile>=0.12,<1",
]

[project.optional-dependencies]
test = ["pytest>=8,<9", "pytest-cov>=5,<6"]
analysis = ["essentia-tensorflow==2.1b6.dev1389"]

[project.scripts]
autolabel = "autolabel.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/autolabel"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

